--- a/src/components/LipstickModel/LipstickModel.css
+++ b/src/components/LipstickModel/LipstickModel.css
@@ -2,11 +2,11 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    z-index: 6;
+    z-index: 5;
 }
 
 #lipstick-canvas {
     position: sticky;
     inset: 0;
-    z-index: 7;
+    z-index: 5;
 }
