--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -8,5 +8,5 @@
 
 .hero-section {
     position: relative;
-    z-index: 2;
+    z-index: 4;
 }
